Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82251

qdoc: ASSERT: "writer == nullptr" in file docbookgenerator.cpp, line 2249

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.0 Beta1
    • 5.15
    • Build tools: qdoc
    • None
    • 3
    • 4776efd26bf95d21b7cc3137ecc2d81a6ccd2b80 (qt/qttools/5.15)
    • DaVinci sprint 3

    Description

      This is seen after the docbook generator refactoring.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes