qdoc: Fix assert in DocBookGenerator

DocBookGenerator::generateExampleFilePage() constructs a new writer
instance while another one is still in use. Store the old one, and
restore it once the example page has been generated.

Fixes: QTBUG-82251
Change-Id: Ic41c8fed82c27723198415a32bca0225b36922b3
Reviewed-by: Paul Wicking <paul.wicking@qt.io>